Fixed vertical scrollbar on phone view

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   height: 100vh;
   width: 100vw;
+  max-width:100%;
   display: flex;
   flex-direction: row;
   background-color: #f5f5f5;
